--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.kuca_kave">
 
     <application
@@ -8,8 +9,10 @@
         android:label="kuca_kave"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".FoodCategoryActivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".FoodActivity"/>
+        <activity android:name=".FoodCategoryActivity"/>
         <activity android:name=".DrinkActivity" />
         <activity android:name=".DrinkCategoryActivity" />
         <activity android:name=".TopLevelActivity">
